@@ -1,11 +1,18 @@
+
+2018-08-21 Franz Holzinger <franz@ttproducts.de>
+    * support for TYPO3 8.7.x: Remove the parameter $debugLevel which has never been used.
+        Global function debug() initializes its 6th argument to constant E_DEBUG which does not exist and then defaults to string 'E_DEBUG'. This raises a PHP 7.2 warning. see bug #83200.
+    * Remove the file ext_autoload.php because composer will do this job.
+
+2018-08-11 Franz Holzinger <franz@ttproducts.de>
+    * support for TYPO3 9.3.x: see the manual for instructions
+
 2018-06-05  Franz Holzinger  <franz@ttproducts.de>
     * bugfix: only use the hooks if the IP addresses and the TYPO3 mode match
 
 2018-05-28  Franz Holzinger  <franz@ttproducts.de>
     * new feature: option to set a regular expression for sys_log entries which will not produce an entry in the debug log. This is needed in order not to overwrite a debug file with uninteresting no_cache warnings.
     * do not debug sys_log if $params['initLog'] is true
-2018-08-11 Franz Holzinger <franz@ttproducts.de>
-    * support for TYPO3 9.3.x: see the manual for instructions
 
 2018-04-18  Franz Holzinger  <franz@ttproducts.de>
     * new feature: Use the option MAXSIZE to set the maximum size for a debug file.
